# couchbase-lite-core

./: CMakeLists.txt
C/: c4.def  c4.exp  c4Base.cc  c4Document.cc
C/include/: c4.hh  c4Base.h  c4Database.h  c4Document.h
C/tests/: CMakeLists.txt  c4DocumentTest.cc
C/tests/cmake/: platform_apple.cmake  platform_linux.cmake  platform_win.cmake
Java/jni/: native_c4docenumerator.cc
LiteCore/Database/: Database.cc  Database.hh  Document.hh  LeafDocument.cc  TreeDocument.cc  Upgrader.cc
LiteCore/RevTrees/: VersionedDocument.cc
LiteCore/Storage/: SQLiteKeyStore.cc
LiteCore/Support/: FilePath.cc
LiteCore/tests/: CMakeLists.txt  DataFileTest.cc  UpgraderTest.cc
LiteCore/tests/cmake/: platform_apple.cmake  platform_linux.cmake  platform_win.cmake
REST/: CMakeLists.txt
Xcode/LiteCore.xcodeproj/: project.pbxproj
cmake/: platform_android.cmake  platform_apple.cmake  platform_base.cmake  platform_linux.cmake  platform_linux_desktop.cmake  platform_unix.cmake  platform_win.cmake  platform_win_desktop.cmake  platform_win_store.cmake
